<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_primary"
    tools:context=".todoadditem.presentation.TaskEditFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/close_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/save_but"
            style="@style/TextStyle.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/save_but_text"
            android:textColor="@color/color_blue" />

    </androidx.appcompat.widget.Toolbar>

    <!--            <View-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="3dp"-->
    <!--                android:background="@drawable/bottom_shadow"-->
    <!--                android:layout_gravity="bottom" />-->
    <!--            TODO: Add shadow here-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="3"
            android:ems="10"
            android:background="@drawable/recycler_background"
            android:layout_margin="16dp" />

            <LinearLayout
                android:id="@+id/priority_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Body"
                    android:text="@string/priority_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Subhead"
                    android:text="@string/priority_none"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/support_separator"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="28dp"
                android:paddingBottom="48dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Body"
                    android:text="@string/deadline_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline_default"
                    style="@style/TextStyle.Subhead"
                    android:layout_gravity="bottom" />
                </LinearLayout>

                <Switch
                    android:id="@+id/deadline_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/support_separator"/>

            <LinearLayout
                android:id="@+id/delete_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true">

                <ImageButton
                    android:id="@+id/toggle_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_label"
                    android:textColor="@color/color_red"
                    style="@style/TextStyle.Body"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>